updated Abraham visualizations and css

--- a/download/corpora/AOF/Abraham.XL93-94_analytic.html
+++ b/download/corpora/AOF/Abraham.XL93-94_analytic.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-<!--October 12, 2014 by Caroline T. Schroeder-->
+<!--October 30, 2014 by Caroline T. Schroeder-->
 <div class="v-panel-content v-panel-content-annis-wrapped-htmlvis-shenoute_abraham_our_father v-panel-content-corpus-font-force v-scrollable" tabindex="-1" style="position: relative;">
 
 <div class="v-label v-widget htmlvis v-label-htmlvis v-label-undef-w"><span class="copt_word"><!--
@@ -169,7 +169,7 @@
 --><ruby class="norm">ⲉ<!--
 --><rt class="pos" pos="CCIRC"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲧⲉⲧⲛ<!--
 --><rt class="pos" pos="PPERS"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ϣⲁ<!--
---><rt class="pos" pos="PREP"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲛ<!--
+--><rt class="pos" pos="V"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲛ<!--
 --><rt class="pos" pos="PPERO"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲧⲙ<!--
 --><rt class="pos" pos="NEG"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲛⲁⲩ<!--
 --><rt class="pos" pos="V"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
@@ -347,8 +347,7 @@
 --><rt class="pos" pos="PREP"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲡ<!--
 --><rt class="pos" pos="ART"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲥⲱⲛⲧ<!--
 --><rt class="pos" pos="V"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
---><ruby class="norm">ϣⲁ<!--
---><rt class="pos" pos="AAOR"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ϩⲣⲁⲓ<!--
+--><ruby class="norm">ϣⲁϩⲣⲁⲓ<!--
 --><rt class="pos" pos="ADV"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
 --><ruby class="norm">ⲉ<!--
 --><rt class="pos" pos="PREP"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲡ<!--
@@ -362,7 +361,7 @@
 --><ruby class="norm">ⲟⲛ<!--
 --><rt class="pos" pos="ADV"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
 --><ruby class="norm">ϣⲁ<!--
---><rt class="pos" pos="AAOR"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲉⲛⲉϩ<!--
+--><rt class="pos" pos="PREP"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲉⲛⲉϩ<!--
 --><rt class="pos" pos="N"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
 --><ruby class="norm">·<!--
 --><rt class="pos" pos="PUNCT"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
@@ -474,9 +473,8 @@
 --><rt class="pos" pos="PPERS"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲧⲛⲛⲟ<!--
 --><rt class="pos" pos="V"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲟⲩ<!--
 --><rt class="pos" pos="PPERO"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
---><ruby class="norm">ϣⲁ<!--
---><rt class="pos" pos="AAOR"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲣⲱ<!--
---><rt class="pos" pos="N"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲧⲛ<!--
+--><ruby class="norm">ϣⲁⲣⲱ<!--
+--><rt class="pos" pos="PREP"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲧⲛ<!--
 --><rt class="pos" pos="PPERO"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
 --><ruby class="norm">ⲛ<!--
 --><rt class="pos" pos="PREP"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲛ<!--
