--- a/download/corpora/AOF/Abraham.YA518-20_norm.html
+++ b/download/corpora/AOF/Abraham.YA518-20_norm.html
@@ -22,9 +22,14 @@
 </head>
 
 <body>
-<div class="v-slot v-slot-corpus-font"><div class="v-panel v-widget corpus-font v-panel-corpus-font v-has-width" style="overflow: hidden; width: 100%; padding-top: 1px; padding-bottom: 0px;"><div class="v-panel-captionwrap" style="margin-top: -1px;"><div class="v-panel-nocaption v-panel-nocaption-corpus-font"><span></span></div></div><div class="v-panel-content v-panel-content-corpus-font v-scrollable" tabindex="-1" style="position: relative;">
+<div class="v-slot v-slot-corpus-font"><div class="v-panel v-widget corpus-font v-panel-corpus-font v-has-width" style="overflow: hidden; width: 100%; padding-top: 1px; padding-bottom: 0px;"><div class="v-panel-captionwrap" style="margin-top: -1px;"><div class="v-panel-nocaption v-panel-nocaption-corpus-font"><span></span></div></div>
+<div class="v-panel-content v-panel-content-corpus-font v-scrollable" tabindex="-1" style="position: relative;">
 
-<div class="v-label v-widget htmlvis v-label-htmlvis v-label-undef-w"><p><!--
+<!--October 30, 2014 by Caroline T. Schroeder-->
+
+
+<div class="v-label v-widget htmlvis v-label-htmlvis v-label-undef-w"><q class="page" page="YA518"><!--
+--><p><!--
 --><t class="translation" title="Letter of Shenoute"><!--
 --><span class="word"><!--
 --><span class="norm">⳾</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
@@ -147,7 +152,7 @@
 --><span class="norm">ⲡ</span><!-- end of "norm" --><span class="norm">ⲉⲧ</span><!-- end of "norm" --><span class="norm">ⲛⲏⲩ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
 --><span class="norm">ⲉⲃⲟⲗ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
 --><span class="norm">ϩⲛ</span><!-- end of "norm" --><span class="norm">ⲛⲉⲕ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
---><span class="norm">·</span><!-- end of "norm" --></span><!-- end of "word" --><q class="page" page="YA519"><!--
+--><span class="norm">·</span><!-- end of "norm" --></span><!-- end of "word" --><!-- end of "page" --><q class="page" page="YA519"><!--
 --><span class="word"><!--
 --><span class="norm">[....]ⲥ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
 --><span class="norm">·</span><!-- end of "norm" --></span><!-- end of "word" --></q></t><!-- end of "translation" --><t class="translation" title="Isaac [it is he alone who will inher]it from you.'"><!--
@@ -387,7 +392,7 @@
 --><span class="norm">ⲙⲛ</span><!-- end of "norm" --><span class="norm">ⲓⲥⲁⲁⲕ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
 --><span class="norm">ⲙⲛ</span><!-- end of "norm" --><span class="norm">ⲓⲁⲕⲱⲃ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
 --><span class="norm">·</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
---><span class="norm">ⲙⲛ</span><!-- end of "norm" --><span class="norm">ⲛ</span><!-- end of "norm" --><span class="norm">ϣⲏⲣⲉ</span><!-- end of "norm" --></span><!-- end of "word" --></t><!-- end of "translation" --><!-- end of "page" --></p><!-- end of "" --></div>
+--><span class="norm">ⲙⲛ</span><!-- end of "norm" --><span class="norm">ⲛ</span><!-- end of "norm" --><span class="norm">ϣⲏⲣⲉ</span><!-- end of "norm" --></span><!-- end of "word" --></t><!-- end of "translation" --><!-- end of "page" --></p><!-- end of "" --></q></div>
 
 <div class="v-panel-deco v-panel-deco-corpus-font" style="margin-bottom: 0px;"></div></div></div>
 </body>
