--- a/download/corpora/AOF/Abraham.YA525-30_analytic.html
+++ b/download/corpora/AOF/Abraham.YA525-30_analytic.html
@@ -22,8 +22,9 @@
 </head>
 
 <body>
-<!--October 12, 2014 by Caroline T. Schroeder-->
+<!--October 30, 2014 by Caroline T. Schroeder-->
 <div class="v-panel-content v-panel-content-annis-wrapped-htmlvis-shenoute_abraham_our_father v-panel-content-corpus-font-force v-scrollable" tabindex="-1" style="position: relative;">
+
 <div class="v-label v-widget htmlvis v-label-htmlvis v-label-undef-w"><div class="translation" trans="[5 page lacuna, and at least part of it must be a continuation of this list to include “Anna, and the mother of the prophet Sampson, and Elizabeth, the mother of John, who was filled with the holy spirit from the time he was in his mother's womb” who are mentioned below.  What else is missing is, of course, unknown but it seems that we begin again at the main (?) point of Shenoute’s argument.]   So we are foolish, or blind, "><!--
 --><span class="copt_word"><!--
 --><ruby class="norm">ⲉⲧⲃⲉ<!--
@@ -541,9 +542,8 @@
 --><rt class="pos" pos="PREP"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲛ<!--
 --><rt class="pos" pos="ART"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ϣⲟⲣⲡ<!--
 --><rt class="pos" pos="N"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
---><ruby class="norm">ϣⲁ<!--
---><rt class="pos" pos="PREP"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ϩⲣⲁⲓ<!--
---><rt class="pos" pos="N"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
+--><ruby class="norm">ϣⲁϩⲣⲁⲓ<!--
+--><rt class="pos" pos="ADV"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
 --><ruby class="norm">ⲉ<!--
 --><rt class="pos" pos="PREP"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲧⲉⲛⲟⲩ<!--
 --><rt class="pos" pos="ADV"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
@@ -866,9 +866,8 @@
 --><rt class="pos" pos="PREP"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲛ<!--
 --><rt class="pos" pos="ART"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ϣⲟⲣⲡ<!--
 --><rt class="pos" pos="N"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
---><ruby class="norm">ϣⲁ<!--
---><rt class="pos" pos="PREP"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ϩⲣⲁⲓ<!--
---><rt class="pos" pos="N"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
+--><ruby class="norm">ϣⲁϩⲣⲁⲓ<!--
+--><rt class="pos" pos="ADV"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
 --><ruby class="norm">ⲉ<!--
 --><rt class="pos" pos="PREP"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲧⲉⲛⲟⲩ<!--
 --><rt class="pos" pos="ADV"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
@@ -1106,7 +1105,7 @@
 --><rt class="pos" pos="PPOS"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲙⲛⲧⲁⲧⲥⲟⲟⲩⲛ<!--
 --><rt class="pos" pos="N"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
 --><ruby class="norm">·<!--
---><rt class="pos" pos="PUNCT"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --></div><!-- end of "translation" --><div class="translation" trans="' the lord will give eunuchs and virgins choice rank a reputation better than sons daughters.' "><!--
+--><rt class="pos" pos="PUNCT"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --></div><!-- end of "translation" --><div class="translation" trans="'The Lord will give eunuchs and virgins choice rank and a reputation better than sons and daughters.' "><!--
 --><span class="copt_word"><!--
 --><ruby class="norm">ϫⲉ<!--
 --><rt class="pos" pos="CONJ"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲡ<!--
@@ -1209,7 +1208,7 @@
 --><rt class="pos" pos="V"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
 --><ruby class="norm">ⲙⲙⲟ<!--
 --><rt class="pos" pos="PREP"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲥ<!--
---><rt class="pos" pos="PPERO"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --></div><!-- end of "translation" --><div class="translation" trans="' we are pleasing to God,' "><!--
+--><rt class="pos" pos="PPERO"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --></div><!-- end of "translation" --><div class="translation" trans="'We are pleasing to God,' "><!--
 --><span class="copt_word"><!--
 --><ruby class="norm">ϫⲉ<!--
 --><rt class="pos" pos="CONJ"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲧⲛ<!--
@@ -1221,7 +1220,7 @@
 --><rt class="pos" pos="ART"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲛⲟⲩⲧⲉ<!--
 --><rt class="pos" pos="N"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
 --><ruby class="norm">·<!--
---><rt class="pos" pos="PUNCT"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --></div><!-- end of "translation" --><div class="translation" trans="or, 'these people and others are not our concern.' "><!--
+--><rt class="pos" pos="PUNCT"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --></div><!-- end of "translation" --><div class="translation" trans="or, 'These people and others are not our concern.'"><!--
 --><span class="copt_word"><!--
 --><ruby class="norm">ⲁⲩⲱ<!--
 --><rt class="pos" pos="CONJ"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
@@ -1301,7 +1300,7 @@
 --><rt class="pos" pos="V"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
 --><ruby class="norm">ⲙⲙⲟ<!--
 --><rt class="pos" pos="PREP"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲥ<!--
---><rt class="pos" pos="PPERO"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --></div><!-- end of "translation" --><div class="translation" trans="'The Lord will give eunuchs and virgins the kingdom of heaven.' "><!--
+--><rt class="pos" pos="PPERO"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --></div><!-- end of "translation" --><div class="translation" trans="'The Lord will give eunuchs and virgins the kingdom of heaven.'; "><!--
 --><span class="copt_word"><!--
 --><ruby class="norm">ϫⲉ<!--
 --><rt class="pos" pos="CONJ"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲡ<!--
@@ -1394,7 +1393,7 @@
 --><rt class="pos" pos="PREP"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲥ<!--
 --><rt class="pos" pos="PPERO"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
 --><ruby class="norm">·<!--
---><rt class="pos" pos="PUNCT"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --></div><!-- end of "translation" --><div class="translation" trans="' do not let [a person] seek his own salvation, but another's,' "><!--
+--><rt class="pos" pos="PUNCT"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --></div><!-- end of "translation" --><div class="translation" trans="'Do not let [a person] seek his own salvation, but another's,' "><!--
 --><span class="copt_word"><!--
 --><ruby class="norm">ϫⲉ<!--
 --><rt class="pos" pos="CONJ"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲙⲡⲣ<!--
@@ -1453,7 +1452,7 @@
 --><rt class="pos" pos="ART"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲡⲣⲟⲫⲏⲧⲏⲥ<!--
 --><rt class="pos" pos="N"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
 --><ruby class="norm">ⲉⲧⲉⲣⲉ<!--
---><rt class="pos" pos="CREL"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲛⲓ<!--
+--><rt class="pos" pos="CREL"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲛⲉⲓ<!--
 --><rt class="pos" pos="PDEM"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲁⲧⲥⲃⲱ<!--
 --><rt class="pos" pos="N"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
 --><ruby class="norm">ⲃⲱⲗ<!--
@@ -1470,7 +1469,7 @@
 --><rt class="pos" pos="IMOD"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲟⲩ<!--
 --><rt class="pos" pos="PPERO"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
 --><ruby class="norm">·<!--
---><rt class="pos" pos="PUNCT"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --></div><!-- end of "translation" --><div class="translation" trans the lord will give eu[nuchs and virgins?] choice rank [and] a reputation better than sons daughters," "><!--
+--><rt class="pos" pos="PUNCT"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --></div><!-- end of "translation" --><div class="translation" trans="'The Lord will give eu[nuchs and virgins?] choice rank [and] a reputation better than sons and daughters,' "><!--
 --><span class="copt_word"><!--
 --><ruby class="norm">ϫⲉ<!--
 --><rt class="pos" pos="CONJ"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲡ<!--
@@ -1890,7 +1889,7 @@
 --><rt class="pos" pos="ART"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲅⲁⲙⲟⲥ<!--
 --><rt class="pos" pos="N"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
 --><ruby class="norm">ⲉⲧ<!--
---><rt class="pos" pos="CREL"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲧⲁⲓⲏⲩ<!--
+--><rt class="pos" pos="CREL"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲧⲁⲉⲓⲏⲩ<!--
 --><rt class="pos" pos="VSTAT"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
 --><ruby class="norm">·<!--
 --><rt class="pos" pos="PUNCT"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
