--- a/download/corpora/AOF/Abraham.YA535-40_analytic.html
+++ b/download/corpora/AOF/Abraham.YA535-40_analytic.html
@@ -22,9 +22,8 @@
 </head>
 
 <body>
-<!--October 12, 2014 by Caroline T. Schroeder-->
+<!--October 30, 2014 by Caroline T. Schroeder-->
 <div class="v-panel-content v-panel-content-annis-wrapped-htmlvis-shenoute_abraham_our_father v-panel-content-corpus-font-force v-scrollable" tabindex="-1" style="position: relative;">
-
 
 <div class="v-label v-widget htmlvis v-label-htmlvis v-label-undef-w"><div class="translation" trans="that he will not take vengeance on those who kill them and whip them "><!--
 --><span class="copt_word"><!--
@@ -131,8 +130,7 @@
 --><ruby class="norm">ⲛ<!--
 --><rt class="pos" pos="PREP"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ϩⲓⲥⲉ<!--
 --><rt class="pos" pos="N"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
---><ruby class="norm">ϣⲁ<!--
---><rt class="pos" pos="AAOR"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ϩⲣⲁⲓ<!--
+--><ruby class="norm">ϣⲁϩⲣⲁⲓ<!--
 --><rt class="pos" pos="ADV"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
 --><ruby class="norm">ⲉ<!--
 --><rt class="pos" pos="PREP"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲡ<!--
@@ -261,7 +259,7 @@
 --><rt class="pos" pos="N"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
 --><ruby class="norm">ⲛ<!--
 --><rt class="pos" pos="PREP"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ϣⲁ<!--
---><rt class="pos" pos="AAOR"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲛ<!--
+--><rt class="pos" pos="N"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲛ<!--
 --><rt class="pos" pos="PREP"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ϩⲧⲏ<!--
 --><rt class="pos" pos="N"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ϥ<!--
 --><rt class="pos" pos="PPERO"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
@@ -286,7 +284,7 @@
 --><ruby class="norm">·<!--
 --><rt class="pos" pos="PUNCT"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
 --><ruby class="norm">ϣⲁ<!--
---><rt class="pos" pos="AAOR"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲁⲣⲏϫ<!--
+--><rt class="pos" pos="PREP"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲁⲣⲏϫ<!--
 --><rt class="pos" pos="V"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲥ<!--
 --><rt class="pos" pos="PPERO"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
 --><ruby class="norm">ⲛ<!--
@@ -311,8 +309,7 @@
 --><rt class="pos" pos="PREP"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲡ<!--
 --><rt class="pos" pos="ART"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲕⲁϩ<!--
 --><rt class="pos" pos="N"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
---><ruby class="norm">ϣⲁ<!--
---><rt class="pos" pos="AAOR"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ϩⲣⲁⲓ<!--
+--><ruby class="norm">ϣⲁϩⲣⲁⲓ<!--
 --><rt class="pos" pos="ADV"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
 --><ruby class="norm">ⲉ<!--
 --><rt class="pos" pos="PREP"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲡ<!--
@@ -333,8 +330,7 @@
 --><rt class="pos" pos="PPERO"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲛⲁ<!--
 --><rt class="pos" pos="PREP"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ϥⲓ<!--
 --><rt class="pos" pos="V"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
---><ruby class="norm">ϣⲁ<!--
---><rt class="pos" pos="AAOR"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ϩⲣⲁⲓ<!--
+--><ruby class="norm">ϣⲁϩⲣⲁⲓ<!--
 --><rt class="pos" pos="ADV"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
 --><ruby class="norm">ⲉ<!--
 --><rt class="pos" pos="PREP"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲧ<!--
@@ -466,8 +462,7 @@
 --><rt class="pos" pos="PREP"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲡ<!--
 --><rt class="pos" pos="ART"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲥⲱⲛⲧ<!--
 --><rt class="pos" pos="V"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
---><ruby class="norm">ϣⲁ<!--
---><rt class="pos" pos="AAOR"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ϩⲣⲁⲓ<!--
+--><ruby class="norm">ϣⲁϩⲣⲁⲓ<!--
 --><rt class="pos" pos="ADV"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
 --><ruby class="norm">ⲉ<!--
 --><rt class="pos" pos="PREP"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲡ<!--
@@ -481,7 +476,7 @@
 --><ruby class="norm">ⲟⲛ<!--
 --><rt class="pos" pos="ADV"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
 --><ruby class="norm">ϣⲁ<!--
---><rt class="pos" pos="AAOR"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲉⲛⲉϩ<!--
+--><rt class="pos" pos="PREP"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲉⲛⲉϩ<!--
 --><rt class="pos" pos="N"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
 --><ruby class="norm">·<!--
 --><rt class="pos" pos="PUNCT"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --></div><!-- end of "translation" --><div class="translation" trans="But let us be servants to one another,"><!--
@@ -595,7 +590,7 @@
 --><rt class="pos" pos="ART"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲅⲣⲁⲫⲏ<!--
 --><rt class="pos" pos="N"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
 --><ruby class="norm">·<!--
---><rt class="pos" pos="PUNCT"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --></div><!-- end of "translation" --><div class="translation" trans="" i="" sent="" you="" my="" servants,="" the="" prophets="" on="" day="" at="" first="" hour;"=""><!--
+--><rt class="pos" pos="PUNCT"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --></div><!-- end of "translation" --><div class="translation" trans="'I sent you my servants, the prophets on the day at the first hour;"><!--
 --><span class="copt_word"><!--
 --><ruby class="norm">ϫⲉ<!--
 --><rt class="pos" pos="CONJ"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲁ<!--
@@ -624,7 +619,7 @@
 --><rt class="pos" pos="V"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
 --><ruby class="norm">ⲛ<!--
 --><rt class="pos" pos="PREP"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ϣⲱⲣⲡ<!--
---><rt class="pos" pos="V"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --></div><!-- end of "translation" --><div class="translation" trans="I sent them and you did not listen." "=""><!--
+--><rt class="pos" pos="V"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --></div><!-- end of "translation" --><div class="translation" trans="I sent them and you did not listen.'"><!--
 --><span class="copt_word"><!--
 --><ruby class="norm">ⲁⲩⲱ<!--
 --><rt class="pos" pos="CONJ"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
@@ -838,7 +833,7 @@
 --><rt class="pos" pos="VBD"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ϥ<!--
 --><rt class="pos" pos="PPERO"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
 --><ruby class="norm">ⲛⲁⲩ<!--
---><rt class="pos" pos="V"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --></div><!-- end of "translation" --><div class="translation" trans="“I will not call you my servants from now on  "><!--
+--><rt class="pos" pos="V"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --></div><!-- end of "translation" --><div class="translation" trans="'I will not call you my servants from now on  "><!--
 --><span class="copt_word"><!--
 --><ruby class="norm">ϫⲉ<!--
 --><rt class="pos" pos="CONJ"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ϯ<!--
@@ -910,7 +905,7 @@
 --><rt class="pos" pos="APST"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ϣⲃⲉⲉⲣ<!--
 --><rt class="pos" pos="N"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
 --><ruby class="norm">·<!--
---><rt class="pos" pos="PUNCT"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --></div><!-- end of "translation" --><div class="translation" trans="because I have told you all the things I have heard from my father.”"><!--
+--><rt class="pos" pos="PUNCT"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --></div><!-- end of "translation" --><div class="translation" trans="because I have told you all the things I have heard from my father.'"><!--
 --><span class="copt_word"><!--
 --><ruby class="norm">ϫⲉ<!--
 --><rt class="pos" pos="CONJ"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲛ<!--
@@ -937,7 +932,7 @@
 --><rt class="pos" pos="PREP"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲟⲩ<!--
 --><rt class="pos" pos="PPERO"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
 --><ruby class="norm">·<!--
---><rt class="pos" pos="PUNCT"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --></div><!-- end of "translation" --><div class="translation" trans="He said, “It was not you who chose me "><!--
+--><rt class="pos" pos="PUNCT"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --></div><!-- end of "translation" --><div class="translation" trans="He said, 'It was not you who chose me "><!--
 --><span class="copt_word"><!--
 --><ruby class="norm">ⲛⲧⲱⲧⲛ<!--
 --><rt class="pos" pos="PPERI"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
@@ -1075,7 +1070,7 @@
 --><rt class="pos" pos="CONJ"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲃⲉⲉⲗⲍⲉⲃⲟⲩⲗ<!--
 --><rt class="pos" pos="N"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
 --><ruby class="norm">·<!--
---><rt class="pos" pos="PUNCT"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --></div><!-- end of "translation" --><div class="translation" trans="then how much [more] will they insult a member of his household sneeringly and insultingly?”"><!--
+--><rt class="pos" pos="PUNCT"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --></div><!-- end of "translation" --><div class="translation" trans="then how much [more] will they insult a member of his household sneeringly and insultingly?'"><!--
 --><span class="copt_word"><!--
 --><ruby class="norm">ⲉⲓⲉ<!--
 --><rt class="pos" pos="PTC"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
@@ -1215,7 +1210,7 @@
 --><rt class="pos" pos="PREP"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲥ<!--
 --><rt class="pos" pos="PPERO"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
 --><ruby class="norm">·<!--
---><rt class="pos" pos="PUNCT"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --></div><!-- end of "translation" --><div class="translation" trans="" we="" will="" not="" take="" care="" of="" our="" brethren,"="" revealing="" that="" are="" unworthy="" the="" gift="" lord,="" who="" made="" us="" worthy="" to="" approach="" him="" through="" deeds--="" "=""><!--
+--><rt class="pos" pos="PUNCT"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --></div><!-- end of "translation" --><div class="translation" trans="'We will not take care of our brethren,' revealing that we are unworthy of the gift of the Lord, who made us worthy to approach him through deeds-- "><!--
 --><span class="copt_word"><!--
 --><ruby class="norm">ϫⲉ<!--
 --><rt class="pos" pos="CONJ"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲛ<!--
@@ -1645,8 +1640,7 @@
 --><rt class="pos" pos="PREP"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲛ<!--
 --><rt class="pos" pos="ART"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ϣⲟⲣⲡ<!--
 --><rt class="pos" pos="N"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
---><ruby class="norm">ϣⲁ<!--
---><rt class="pos" pos="AAOR"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ϩⲣⲁⲓ<!--
+--><ruby class="norm">ϣⲁϩⲣⲁⲓ<!--
 --><rt class="pos" pos="ADV"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
 --><ruby class="norm">ⲉ<!--
 --><rt class="pos" pos="CCIRC"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲧⲉⲛⲟⲩ<!--
@@ -1847,7 +1841,7 @@
 --><rt class="pos" pos="ART"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲅⲣⲁⲫⲏ<!--
 --><rt class="pos" pos="N"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
 --><ruby class="norm">·<!--
---><rt class="pos" pos="PUNCT"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --></div><!-- end of "translation" --><div class="translation" trans="" you="" established="" the="" foundations="" of="" earth.="" "=""><!--
+--><rt class="pos" pos="PUNCT"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --></div><!-- end of "translation" --><div class="translation" trans="'You established the foundations of earth. '"><!--
 --><span class="copt_word"><!--
 --><ruby class="norm">ϫⲉ<!--
 --><rt class="pos" pos="CONJ"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲛⲧⲟⲕ<!--
@@ -1862,7 +1856,7 @@
 --><rt class="pos" pos="PREP"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲕⲁϩ<!--
 --><rt class="pos" pos="N"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
 --><ruby class="norm">·<!--
---><rt class="pos" pos="PUNCT"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --></div><!-- end of "translation" --><div class="translation" trans="Your manual labor is the heavens." "=""><!--
+--><rt class="pos" pos="PUNCT"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --></div><!-- end of "translation" --><div class="translation" trans="Your manual labor is the heavens.  "><!--
 --><span class="copt_word"><!--
 --><ruby class="norm">ⲛⲉ<!--
 --><rt class="pos" pos="ART"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ϩⲃⲏⲩⲉ<!--
@@ -2219,7 +2213,8 @@
 --><ruby class="norm">ⲡⲁⲓ<!--
 --><rt class="pos" pos="PDEM"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
 --><ruby class="norm">ⲛ<!--
---><rt class="pos" pos="PREP"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span></div><!-- end of "translation" --><!-- end of "copt_word" --></div>
+--><rt class="pos" pos="PREP"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --></div><!-- end of "translation" --></div>
+
 <div class="v-panel-deco v-panel-deco-annis-wrapped-htmlvis-shenoute_abraham_our_father v-panel-deco-corpus-font-force" style="margin-bottom: 0px;"></div>
 </body>
 </html>
