--- a/download/corpora/AOF/Abraham.YA547-50_analytic.html
+++ b/download/corpora/AOF/Abraham.YA547-50_analytic.html
@@ -22,9 +22,7 @@
 </head>
 
 <body>
-<!--October 12, 2014 by Caroline T. Schroeder-->
-<div class="v-panel-content v-panel-content-annis-wrapped-htmlvis-shenoute_abraham_our_father v-panel-content-corpus-font-force v-scrollable" tabindex="-1" style="position: relative;">
-
+<!--October 30, 2014 by Caroline T. Schroeder-->
 <div class="v-label v-widget htmlvis v-label-htmlvis v-label-undef-w"><div class="translation" trans="[lacuna of 3 folios/6 pages].... . . and in your community. "><!--
 --><span class="copt_word"><!--
 --><ruby class="norm">ⲁⲩⲱ<!--
@@ -204,7 +202,7 @@
 --><ruby class="norm">ⲁⲩⲱ<!--
 --><rt class="pos" pos="CONJ"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
 --><ruby class="norm">ϣⲁ<!--
---><rt class="pos" pos="AAOR"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲉⲛⲉϩ<!--
+--><rt class="pos" pos="PREP"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲉⲛⲉϩ<!--
 --><rt class="pos" pos="N"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
 --><ruby class="norm">·<!--
 --><rt class="pos" pos="PUNCT"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --></div><!-- end of "translation" --><div class="translation" trans="But if our ancient ancestors had disobedient and sinful children, "><!--
@@ -942,7 +940,7 @@
 --><ruby class="norm">ⲁⲩⲱ<!--
 --><rt class="pos" pos="CONJ"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
 --><ruby class="norm">ⲙⲡ<!--
---><rt class="pos" pos="NPROP"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲟⲩ<!--
+--><rt class="pos" pos="ANEGPST"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲟⲩ<!--
 --><rt class="pos" pos="PPERS"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ϯ<!--
 --><rt class="pos" pos="V"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲥⲟ<!--
 --><rt class="pos" pos="N"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
@@ -1350,7 +1348,7 @@
 --><rt class="pos" pos="V"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲙ<!--
 --><rt class="pos" pos="PREP"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲡ<!--
 --><rt class="pos" pos="ART"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ϣⲁ<!--
---><rt class="pos" pos="AAOR"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
+--><rt class="pos" pos="N"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
 --><ruby class="norm">ⲙ<!--
 --><rt class="pos" pos="PREP"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲡ<!--
 --><rt class="pos" pos="ART"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲛⲟⲩⲧⲉ<!--
@@ -1366,7 +1364,7 @@
 --><ruby class="norm">ⲡⲛⲟⲩⲧⲉ<!--
 --><rt class="pos" pos="N"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
 --><ruby class="norm">·<!--
---><rt class="pos" pos="PUNCT"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --></div><!-- end of "translation" --><div class="translation" trans="and our Lord is truthful, who said, “I am the truth.” "><!--
+--><rt class="pos" pos="PUNCT"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --></div><!-- end of "translation" --><div class="translation" trans="and our Lord is truthful, who said, 'I am the truth.' "><!--
 --><span class="copt_word"><!--
 --><ruby class="norm">ⲁⲩⲱ<!--
 --><rt class="pos" pos="CONJ"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
@@ -1533,7 +1531,7 @@
 --><rt class="pos" pos="CREL"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲥⲏϩ<!--
 --><rt class="pos" pos="VSTAT"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
 --><ruby class="norm">·<!--
---><rt class="pos" pos="PUNCT"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --></div><!-- end of "translation" --><div class="translation" trans="'whenever a liar speaks, he speaks among his companions. [??] that everyone who sins and lies belongs to...'' [text picks up in ya 551-54]"><!--
+--><rt class="pos" pos="PUNCT"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --></div><!-- end of "translation" --><div class="translation" trans="'Whenever a liar speaks, he speaks among his companions.  [??] that everyone who sins and who lies belongs to…' [text picks up in YA 551-54]"><!--
 --><span class="copt_word"><!--
 --><ruby class="norm">ϫⲉ<!--
 --><rt class="pos" pos="CONJ"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ϩⲟⲧⲁⲛ<!--
