--- a/download/corpora/AOF/Abraham.YA547-50_norm.html
+++ b/download/corpora/AOF/Abraham.YA547-50_norm.html
@@ -23,7 +23,7 @@
 
 <body>
 <div class="v-slot v-slot-corpus-font"><div class="v-panel v-widget corpus-font v-panel-corpus-font v-has-width" style="overflow: hidden; width: 100%; padding-top: 1px; padding-bottom: 0px;"><div class="v-panel-captionwrap" style="margin-top: -1px;"><div class="v-panel-nocaption v-panel-nocaption-corpus-font"><span></span></div></div><div class="v-panel-content v-panel-content-corpus-font v-scrollable" tabindex="-1" style="position: relative;">
-<!--October 12, 2014 by Caroline T. Schroeder-->
+<!--October 30, 2014 by Caroline T. Schroeder-->
 <div class="v-label v-widget htmlvis v-label-htmlvis v-label-undef-w"><q class="page" page="YA547"><!--
 --><p><!--
 --><t class="translation" title="[lacuna of 3 folios/6 pages].... . . and in your community. "><!--
@@ -504,7 +504,7 @@
 --><span class="norm">ϫⲉ</span><!-- end of "norm" --><span class="norm">ⲟⲩ</span><!-- end of "norm" --><span class="norm">ⲙⲉ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
 --><span class="norm">ⲡⲉ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
 --><span class="norm">ⲡⲛⲟⲩⲧⲉ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
---><span class="norm">·</span><!-- end of "norm" --></span><!-- end of "word" --></t><!-- end of "translation" --><t class="translation" title="and our Lord is truthful, who said, “I am the truth.” "><!--
+--><span class="norm">·</span><!-- end of "norm" --></span><!-- end of "word" --></t><!-- end of "translation" --><t class="translation" title="and our Lord is truthful, who said, 'I am the truth.' "><!--
 --><span class="word"><!--
 --><span class="norm">ⲁⲩⲱ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
 --><span class="norm">ⲟⲩ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
@@ -565,7 +565,7 @@
 --><span class="norm">ⲛⲉ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
 --><span class="norm">ⲕⲁⲧⲁ</span><!-- end of "norm" --><span class="norm">ⲧ</span><!-- end of "norm" --><span class="norm">ϩⲉ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
 --><span class="norm">ⲉⲧ</span><!-- end of "norm" --><span class="norm">ⲥⲏϩ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
---><span class="norm">·</span><!-- end of "norm" --></span><!-- end of "word" --></t><!-- end of "translation" --><t class="translation" title="' whenever a liar speaks, he speaks among his companions. [??] that everyone who sins and lies belongs to...' [text picks up in ya 551-54]"><!--
+--><span class="norm">·</span><!-- end of "norm" --></span><!-- end of "word" --></t><!-- end of "translation" --><t class="translation" title="'Whenever a liar speaks, he speaks among his companions.  [??] that everyone who sins and who lies belongs to…' [text picks up in YA 551-54]"><!--
 --><span class="word"><!--
 --><span class="norm">ϫⲉ</span><!-- end of "norm" --><span class="norm">ϩⲟⲧⲁⲛ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
 --><span class="norm">ⲉⲣⲉ</span><!-- end of "norm" --><span class="norm">ⲡ</span><!-- end of "norm" --><span class="norm">ϭⲟⲗ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
@@ -585,7 +585,7 @@
 --><span class="norm">ⲉⲧ</span><!-- end of "norm" --><span class="norm">ϫⲱ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
 --><span class="norm">ⲙ</span><!-- end of "norm" --><span class="norm">ⲡ</span><!-- end of "norm" --><span class="norm">ϭⲟⲗ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
 --><span class="norm">ⲉ</span><!-- end of "norm" --><span class="norm">ⲩ</span><!-- end of "norm" --><span class="norm">ⲏⲡ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
---><span class="norm">ⲉ</span><!-- end of "norm" --></span><!-- end of "word" --></t><!-- end of "translation" --></p><!-- end of "" --></q><!-- end of "page" --></div>
+--><span class="norm">ⲉ</span><!-- end of "norm" --></span><!-- end of "word" --></t><!-- end of "translation" --></p><!-- end of "" --></q><!-- end of "page" --></div></div><div class="v-panel-deco v-panel-deco-annis-wrapped-htmlvis-shenoute_abraham_our_father v-panel-deco-corpus-font-force" style="margin-bottom: 0px;"></div></div></div><div class="v-panel-deco" style="margin-bottom: 0px;"></div></div></div></div>
 
 <div class="v-panel-deco v-panel-deco-corpus-font" style="margin-bottom: 0px;"></div></div></div>
 </body>
