--- a/download/corpora/AOF/Abraham.YA551-54_analytic.html
+++ b/download/corpora/AOF/Abraham.YA551-54_analytic.html
@@ -22,8 +22,7 @@
 </head>
 
 <body>
-<!--October 12, 2014 by Caroline T. Schroeder-->
-<div class="v-panel-content v-panel-content-annis-wrapped-htmlvis-shenoute_abraham_our_father v-panel-content-corpus-font-force v-scrollable" tabindex="-1" style="position: relative;">
+<!--October 30, 2014 by Caroline T. Schroeder-->
 <div class="v-label v-widget htmlvis v-label-htmlvis v-label-undef-w"><div class="translation" trans="[continued from YA550] Satan.''"><!--
 --><span class="copt_word"><!--
 --><ruby class="norm">ⲡ<!--
@@ -442,8 +441,7 @@
 --><rt class="pos" pos="PREP"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲛ<!--
 --><rt class="pos" pos="ART"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ϣⲟⲣⲡ<!--
 --><rt class="pos" pos="N"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
---><ruby class="norm">ϣⲁ<!--
---><rt class="pos" pos="AAOR"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ϩⲣⲁⲓ<!--
+--><ruby class="norm">ϣⲁϩⲣⲁⲓ<!--
 --><rt class="pos" pos="ADV"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
 --><ruby class="norm">ⲉ<!--
 --><rt class="pos" pos="PREP"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲡ<!--
@@ -553,11 +551,10 @@
 --><rt class="pos" pos="PREP"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲛ<!--
 --><rt class="pos" pos="ART"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ϣⲟⲣⲡ<!--
 --><rt class="pos" pos="N"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
---><ruby class="norm">ϣⲁ<!--
---><rt class="pos" pos="AAOR"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ϩⲣⲁⲓ<!--
+--><ruby class="norm">ϣⲁϩⲣⲁⲓ<!--
 --><rt class="pos" pos="ADV"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
 --><ruby class="norm">ⲉ<!--
---><rt class="pos" pos="CCIRC"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲧⲉⲛⲟⲩ<!--
+--><rt class="pos" pos="PREP"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲧⲉⲛⲟⲩ<!--
 --><rt class="pos" pos="ADV"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
 --><ruby class="norm">·<!--
 --><rt class="pos" pos="PUNCT"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --></div><!-- end of "translation" --><div class="translation" trans="Indeed it is not wonderful whenever we act like the false prophets and we conceal our sins from our companions, "><!--
@@ -848,7 +845,7 @@
 --><ruby class="norm">ⲉ<!--
 --><rt class="pos" pos="CCIRC"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ϣⲁ<!--
 --><rt class="pos" pos="AAOR"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ϥ<!--
---><rt class="pos" pos="PPERO"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ϫⲟⲟ<!--
+--><rt class="pos" pos="PPERS"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ϫⲟⲟ<!--
 --><rt class="pos" pos="V"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲥ<!--
 --><rt class="pos" pos="PPERO"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
 --><ruby class="norm">ⲛϭⲓ<!--
@@ -1104,10 +1101,10 @@
 --><rt class="pos" pos="ART"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲙⲛⲧⲁⲧⲥⲃⲱ<!--
 --><rt class="pos" pos="N"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
 --><ruby class="norm">·<!--
---><rt class="pos" pos="PUNCT"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --></div><!-- end of "translation" --><span class="copt_word"><!--
+--><rt class="pos" pos="PUNCT"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --></div><!-- end of "translation" --><div class="translation" trans="and she lied in the presence of the Lord, saying, "><!--
+--><span class="copt_word"><!--
 --><ruby class="norm">ⲁⲩⲱ<!--
---><rt class="pos" pos="CONJ"><!--
---><div class="translation" trans="and she lied in the presence of the Lord, saying, "></div><!-- end of "translation" --></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
+--><rt class="pos" pos="CONJ"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
 --><ruby class="norm">ⲛⲧⲟⲥ<!--
 --><rt class="pos" pos="PPERI"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
 --><ruby class="norm">ⲛ<!--
@@ -1124,7 +1121,7 @@
 --><ruby class="norm">ⲙ<!--
 --><rt class="pos" pos="PREP"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲡ<!--
 --><rt class="pos" pos="ART"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ϫⲟⲉⲓⲥ<!--
---><rt class="pos" pos="N"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><div class="translation" trans="'I refuse because I am not capable of doing this task,' "><!--
+--><rt class="pos" pos="N"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --></div><!-- end of "translation" --><div class="translation" trans="'I refuse because I am not capable of doing this task,' "><!--
 --><span class="copt_word"><!--
 --><ruby class="norm">ϫⲉ<!--
 --><rt class="pos" pos="CONJ"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲛⲧ<!--
@@ -1210,7 +1207,7 @@
 --><rt class="pos" pos="ADV"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
 --><ruby class="norm">ϫⲉ<!--
 --><rt class="pos" pos="CONJ"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲙⲡ<!--
---><rt class="pos" pos="NPROP"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲥ<!--
+--><rt class="pos" pos="ANEGPST"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲥ<!--
 --><rt class="pos" pos="PPERS"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲧⲁⲙⲟ<!--
 --><rt class="pos" pos="V"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲛ<!--
 --><rt class="pos" pos="PPERO"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
@@ -1352,7 +1349,7 @@
 --><rt class="pos" pos="V"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ϥ<!--
 --><rt class="pos" pos="PPERO"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
 --><ruby class="norm">ϣⲁⲣⲱ<!--
---><rt class="pos" pos="V"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲧⲛ<!--
+--><rt class="pos" pos="PREP"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲧⲛ<!--
 --><rt class="pos" pos="PPERO"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
 --><ruby class="norm">·<!--
 --><rt class="pos" pos="PUNCT"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --></div><!-- end of "translation" --><div class="translation" trans="so that you can remember God, and pity yourselves, female monks in your community "><!--
