--- a/download/corpora/AOF/Abraham.YA551-54_norm.html
+++ b/download/corpora/AOF/Abraham.YA551-54_norm.html
@@ -23,8 +23,7 @@
 
 <body>
 <div class="v-slot v-slot-corpus-font"><div class="v-panel v-widget corpus-font v-panel-corpus-font v-has-width" style="overflow: hidden; width: 100%; padding-top: 1px; padding-bottom: 0px;"><div class="v-panel-captionwrap" style="margin-top: -1px;"><div class="v-panel-nocaption v-panel-nocaption-corpus-font"><span></span></div></div><div class="v-panel-content v-panel-content-corpus-font v-scrollable" tabindex="-1" style="position: relative;">
-<!--October 12, 2014 by Caroline T. Schroeder-->
-<div class="v-panel-content v-panel-content-annis-wrapped-htmlvis-shenoute_abraham_our_father v-panel-content-corpus-font-force v-scrollable" tabindex="-1" style="position: relative;">
+<!--October 30, 2014 by Caroline T. Schroeder-->
 <div class="v-label v-widget htmlvis v-label-htmlvis v-label-undef-w"><q class="page" page="YA551"><!--
 --><p><!--
 --><t class="translation" title="[continued from YA550] Satan.''"><!--
@@ -174,7 +173,7 @@
 --><span class="word"><!--
 --><span class="norm">ⲙ</span><!-- end of "norm" --><span class="norm">ⲡ</span><!-- end of "norm" --><span class="norm">ⲛⲟⲩⲧⲉ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
 --><span class="norm">ϫⲓⲛ</span><!-- end of "norm" --><span class="norm">ⲛ</span><!-- end of "norm" --><span class="norm">ϣⲟⲣⲡ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
---><span class="norm">ϣⲁ</span><!-- end of "norm" --><span class="norm">ϩⲣⲁⲓ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
+--><span class="norm">ϣⲁϩⲣⲁⲓ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
 --><span class="norm">ⲉ</span><!-- end of "norm" --><span class="norm">ⲡ</span><!-- end of "norm" --><span class="norm">ⲟⲟⲩ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
 --><span class="norm">ⲛ</span><!-- end of "norm" --><span class="norm">ϩⲟⲟⲩ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
 --><span class="norm">·</span><!-- end of "norm" --></span><!-- end of "word" --></q></t><!-- end of "translation" --><t class="translation" title="But let us teach our companions by instruction not to sin in the presence of the Lord.  "><!--
@@ -210,7 +209,7 @@
 --><span class="norm">ⲙ</span><!-- end of "norm" --><span class="norm">ⲡ</span><!-- end of "norm" --><span class="norm">ϫⲟⲉⲓⲥ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
 --><span class="norm">ϫⲓ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
 --><span class="norm">ⲛ</span><!-- end of "norm" --><span class="norm">ⲛ</span><!-- end of "norm" --><span class="norm">ϣⲟⲣⲡ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
---><span class="norm">ϣⲁ</span><!-- end of "norm" --><span class="norm">ϩⲣⲁⲓ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
+--><span class="norm">ϣⲁϩⲣⲁⲓ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
 --><span class="norm">ⲉ</span><!-- end of "norm" --><span class="norm">ⲧⲉⲛⲟⲩ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
 --><span class="norm">·</span><!-- end of "norm" --></span><!-- end of "word" --></t><!-- end of "translation" --></p><!-- end of "" --><p><!--
 --><t class="translation" title="Indeed it is not wonderful whenever we act like the false prophets and we conceal our sins from our companions, "><!--
@@ -387,14 +386,14 @@
 --><span class="norm">ⲛ</span><!-- end of "norm" --><span class="norm">ⲧⲁ</span><!-- end of "norm" --><span class="norm">ⲥ</span><!-- end of "norm" --><span class="norm">ⲁⲑⲉⲧⲓ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
 --><span class="norm">ϩⲛ</span><!-- end of "norm" --><span class="norm">ⲟⲩ</span><!-- end of "norm" --><span class="norm">ϯ</span><!-- end of "norm" --><span class="norm">ⲧⲱⲛ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
 --><span class="norm">ⲙⲛ</span><!-- end of "norm" --><span class="norm">ⲟⲩ</span><!-- end of "norm" --><span class="norm">ⲙⲛⲧⲁⲧⲥⲃⲱ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
---><span class="norm">·</span><!-- end of "norm" --></span><!-- end of "word" --></t><!-- end of "translation" --><span class="word"><!--
---><span class="norm">ⲁⲩⲱ<!--
---><t class="translation" title="and she lied in the presence of the Lord, saying, "></t><!-- end of "translation" --></span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
+--><span class="norm">·</span><!-- end of "norm" --></span><!-- end of "word" --></t><!-- end of "translation" --><t class="translation" title="and she lied in the presence of the Lord, saying, "><!--
+--><span class="word"><!--
+--><span class="norm">ⲁⲩⲱ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
 --><span class="norm">ⲛⲧⲟⲥ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
 --><span class="norm">ⲛ</span><!-- end of "norm" --><span class="norm">ⲥ</span><!-- end of "norm" --><span class="norm">ϫⲓ</span><!-- end of "norm" --><span class="norm">ϭⲟⲗ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
 --><span class="norm">ⲙ</span><!-- end of "norm" --><span class="norm">ⲡⲉ</span><!-- end of "norm" --><span class="norm">ⲙⲧⲟ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
 --><span class="norm">ⲉⲃⲟⲗ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
---><span class="norm">ⲙ</span><!-- end of "norm" --><span class="norm">ⲡ</span><!-- end of "norm" --><span class="norm">ϫⲟⲉⲓⲥ</span><!-- end of "norm" --></span><!-- end of "word" --><t class="translation" title="'I refuse because I am not capable of doing this task,' "><!--
+--><span class="norm">ⲙ</span><!-- end of "norm" --><span class="norm">ⲡ</span><!-- end of "norm" --><span class="norm">ϫⲟⲉⲓⲥ</span><!-- end of "norm" --></span><!-- end of "word" --></t><!-- end of "translation" --><t class="translation" title="'I refuse because I am not capable of doing this task,' "><!--
 --><span class="word"><!--
 --><span class="norm">ϫⲉ</span><!-- end of "norm" --><span class="norm">ⲛⲧ</span><!-- end of "norm" --><span class="norm">ⲁ</span><!-- end of "norm" --><span class="norm">ⲓ</span><!-- end of "norm" --><span class="norm">ⲁⲑⲉⲧⲓ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
 --><span class="norm">ϫⲉ</span><!-- end of "norm" --><span class="norm">ⲙⲛ</span><!-- end of "norm" --><span class="norm">ϭⲟⲙ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
@@ -498,6 +497,9 @@
 --><span class="norm">ⲛϩⲏⲧ</span><!-- end of "norm" --><span class="norm">ⲁⲛⲟⲛ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
 --><span class="norm">ⲁⲩⲱ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
 --><span class="norm">ⲛⲧⲱⲧⲛ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
---><span class="norm">·</span><!-- end of "norm" --></span><!-- end of "word" --></t><!-- end of "translation" --></p><!-- end of "" --></q><!-- end of "page" --></div></div><div class="v-panel-deco v-panel-deco-annis-wrapped-htmlvis-shenoute_abraham_our_father v-panel-deco-corpus-font-force" style="margin-bottom: 0px;"></div></div></div><div class="v-panel-deco" style="margin-bottom: 0px;"></div></div></div></div>
+--><span class="norm">·</span><!-- end of "norm" --></span><!-- end of "word" --></t><!-- end of "translation" --></p><!-- end of "" --></q><!-- end of "page" --></div>
+
+
+</div></div></div>
 </body>
 </html>
