--- a/download/corpora/AOF/Abraham.ZHfrgmts1a_d_analytic.html
+++ b/download/corpora/AOF/Abraham.ZHfrgmts1a_d_analytic.html
@@ -22,8 +22,9 @@
 </head>
 
 <body>
-<!--October 12, 2014 by Caroline T. Schroeder-->
-<div class="v-panel-content v-panel-content-annis-wrapped-htmlvis-shenoute_abraham_our_father v-panel-content-corpus-font-force v-scrollable" tabindex="-1" style="position: relative;"><div class="v-label v-widget htmlvis v-label-htmlvis v-label-undef-w"><div class="translation" trans="But people who do not have sons and daughters according to the flesh, or who have renounced those they did have, "><!--
+<!--October 30, 2014 by Caroline T. Schroeder-->
+
+<div class="v-label v-widget htmlvis v-label-htmlvis v-label-undef-w"><div class="translation" trans="But people who do not have sons and daughters according to the flesh, or who have renounced those they did have, "><!--
 --><span class="copt_word"><!--
 --><ruby class="norm">ϩⲉⲛ<!--
 --><rt class="pos" pos="ART"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲣⲱⲙⲉ<!--
@@ -346,7 +347,7 @@
 --><rt class="pos" pos="ART"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ϫⲟⲉⲓⲥ<!--
 --><rt class="pos" pos="N"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
 --><ruby class="norm">.<!--
---><rt class="pos" pos="PUNCT"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --></div><!-- end of "translation" --><div class="translation" trans="'The one who follows me must hate his father and his mother, his children, his brothers and sisters and even also his own soul.' (lk 14:26) "><!--
+--><rt class="pos" pos="PUNCT"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --></div><!-- end of "translation" --><div class="translation" trans="'The one who follows me must hate his father and his mother, his children, his brothers and sisters and even also his own soul.' (Lk. 14:26) "><!--
 --><span class="copt_word"><!--
 --><ruby class="norm">ϫⲉ<!--
 --><rt class="pos" pos="CONJ"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲡ<!--
@@ -529,7 +530,7 @@
 --><rt class="pos" pos="PREP"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲩ<!--
 --><rt class="pos" pos="PPERO"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
 --><ruby class="norm">.<!--
---><rt class="pos" pos="PUNCT"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --></div><!-- end of "translation" --><div class="translation" trans="they 'took their cross and followed the Lord.'"><!--
+--><rt class="pos" pos="PUNCT"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --></div><!-- end of "translation" --><div class="translation" trans="'they 'took their cross and followed the Lord.'  "><!--
 --><span class="copt_word"><!--
 --><ruby class="norm">ⲁ<!--
 --><rt class="pos" pos="APST"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲩ<!--
@@ -577,7 +578,7 @@
 --><rt class="pos" pos="ART"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲁⲡⲟⲥⲧⲟⲗⲟⲥ<!--
 --><rt class="pos" pos="N"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
 --><ruby class="norm">·<!--
---><rt class="pos" pos="PUNCT"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --></div><!-- end of "translation" --><div class="translation" trans="who truly were " eunuchs="" for="" the="" sake="" of="" kingdom="" god,"="" "=""><!--
+--><rt class="pos" pos="PUNCT"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --></div><!-- end of "translation" --><div class="translation" trans="who truly were 'eunuchs for the sake of the kingdom of God,' "><!--
 --><span class="copt_word"><!--
 --><ruby class="norm">ⲛⲁⲓ<!--
 --><rt class="pos" pos="PDEM"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
@@ -607,9 +608,9 @@
 --><rt class="pos" pos="PDEM"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
 --><ruby class="norm">ⲧⲉ<!--
 --><rt class="pos" pos="COP"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
---><ruby class="norm">ⲑ<!--
---><rt class="pos" pos="NPROP"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲉ<!--
---><rt class="pos" pos="CCIRC"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
+--><ruby class="norm">ⲧ<!--
+--><rt class="pos" pos="ART"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ϩⲉ<!--
+--><rt class="pos" pos="N"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
 --><ruby class="norm">ⲉⲛⲧ<!--
 --><rt class="pos" pos="CREL"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲁ<!--
 --><rt class="pos" pos="APST"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲩ<!--
@@ -1120,7 +1121,7 @@
 --><rt class="pos" pos="APST"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲩ<!--
 --><rt class="pos" pos="PPERS"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ϫⲟⲟ<!--
 --><rt class="pos" pos="V"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲥ<!--
---><rt class="pos" pos="PPERO"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --></div><!-- end of "translation" --><div class="translation" trans="“Follow our pattern, our ordinance, our faith, our patience, our love, our endurance, our persecutions, our labors.”"><!--
+--><rt class="pos" pos="PPERO"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --></div><!-- end of "translation" --><div class="translation" trans="'Follow our pattern, our ordinance, our faith, our patience, our love, our endurance, our persecutions, our labors.'"><!--
 --><span class="copt_word"><!--
 --><ruby class="norm">ϫⲉ<!--
 --><rt class="pos" pos="CONJ"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲟⲩⲉϩ<!--
@@ -1150,7 +1151,7 @@
 --><rt class="pos" pos="PUNCT"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
 --><ruby class="norm">ⲧⲉⲛ<!--
 --><rt class="pos" pos="PPOS"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><rt class="pos" pos="N"><!--
---><ruby class="norm">ϩⲩⲡⲟⲙⲟⲛⲏ</ruby><!-- end of "norm" --></rt></span><!-- end of "copt_word" --><span class="copt_word"></span><!-- end of "copt_word" --><!-- end of "pos" --><span class="copt_word"><!--
+--><ruby class="norm">ϩⲩⲡⲟⲙⲟⲛⲏ</ruby><!-- end of "norm" --></rt></span><!-- end of "copt_word" --><!-- end of "pos" --><span class="copt_word"><!--
 --><ruby class="norm">·<!--
 --><rt class="pos" pos="PUNCT"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
 --><ruby class="norm">ⲛⲉⲛ<!--
@@ -1167,7 +1168,7 @@
 --><ruby class="norm">ⲉⲓⲧⲁ<!--
 --><rt class="pos" pos="CONJ"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
 --><ruby class="norm">ⲟⲛ<!--
---><rt class="pos" pos="ADV"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --></div><!-- end of "translation" --><div class="translation" trans="“We gave ourselves to you as a pattern [to follow].” "><!--
+--><rt class="pos" pos="ADV"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --></div><!-- end of "translation" --><div class="translation" trans="'We gave ourselves to you as a pattern [to follow].' "><!--
 --><span class="copt_word"><!--
 --><ruby class="norm">ϫⲉ<!--
 --><rt class="pos" pos="CONJ"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲁ<!--
@@ -1182,10 +1183,10 @@
 --><rt class="pos" pos="PREP"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲥⲙⲟⲧ<!--
 --><rt class="pos" pos="N"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
 --><ruby class="norm">·<!--
---><rt class="pos" pos="PUNCT"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --></div><!-- end of "translation" --><span class="copt_word"><!--
---><ruby class="norm">ⲁⲩⲱ<!--
---><rt class="pos" pos="CONJ"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><div class="translation" trans="And also, “Receive, my brethren, the pattern of the labor and patience of the prophets.”  "><!--
+--><rt class="pos" pos="PUNCT"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --></div><!-- end of "translation" --><div class="translation" trans="And also, “Receive, my brethren, the pattern of the labor and patience of the prophets.”  "><!--
 --><span class="copt_word"><!--
+--><ruby class="norm">ⲁⲩⲱ<!--
+--><rt class="pos" pos="CONJ"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
 --><ruby class="norm">ⲟⲛ<!--
 --><rt class="pos" pos="ADV"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
 --><ruby class="norm">ϫⲉ<!--
@@ -1403,8 +1404,7 @@
 --><rt class="pos" pos="N"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
 --><ruby class="norm">ⲛⲓⲙ<!--
 --><rt class="pos" pos="PINT"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
---><ruby class="norm">ϣⲁ<!--
---><rt class="pos" pos="AAOR"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ϩⲣⲁⲓ<!--
+--><ruby class="norm">ϣⲁϩⲣⲁⲓ<!--
 --><rt class="pos" pos="ADV"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
 --><ruby class="norm">,<!--
 --><rt class="pos" pos="PUNCT"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
@@ -1581,8 +1581,7 @@
 --><rt class="pos" pos="PREP"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ϩⲉⲛ<!--
 --><rt class="pos" pos="ART"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲕⲟⲟⲩⲉ<!--
 --><rt class="pos" pos="N"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
---><ruby class="norm">ϣⲁ<!--
---><rt class="pos" pos="AAOR"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ϩⲣⲁⲓ<!--
+--><ruby class="norm">ϣⲁϩⲣⲁⲓ<!--
 --><rt class="pos" pos="ADV"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
 --><ruby class="norm">ⲉ<!--
 --><rt class="pos" pos="PREP"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲡ<!--
@@ -1768,9 +1767,7 @@
 --><rt class="pos" pos="N"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
 --><ruby class="norm">,<!--
 --><rt class="pos" pos="PUNCT"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
---><ruby class="norm">ϣⲁ<!--
---><rt class="pos" pos="AAOR"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
---><ruby class="norm">ϩⲣⲁⲓ<!--
+--><ruby class="norm">ϣⲁϩⲣⲁⲓ<!--
 --><rt class="pos" pos="ADV"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
 --><ruby class="norm">ⲉ<!--
 --><rt class="pos" pos="PREP"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲡ<!--
@@ -1784,7 +1781,9 @@
 --><rt class="pos" pos="PPERS"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --><ruby class="norm">ⲉⲓⲣⲉ<!--
 --><rt class="pos" pos="V"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --><span class="copt_word"><!--
 --><ruby class="norm">ϭⲉ<!--
---><rt class="pos" pos="PTC"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --></div><!-- end of "translation" --></div></div>
+--><rt class="pos" pos="PTC"></rt><!-- end of "pos" --></ruby><!-- end of "norm" --></span><!-- end of "copt_word" --></div><!-- end of "translation" --></div>
+
+
 <div class="v-panel-deco v-panel-deco-annis-wrapped-htmlvis-shenoute_abraham_our_father v-panel-deco-corpus-font-force" style="margin-bottom: 0px;"></div>
 </body>
 </html>
