--- a/download/corpora/AOF/Abraham.ZHfrgmts1a_d_norm.html
+++ b/download/corpora/AOF/Abraham.ZHfrgmts1a_d_norm.html
@@ -24,7 +24,7 @@
 <body>
 <div class="v-slot v-slot-corpus-font"><div class="v-panel v-widget corpus-font v-panel-corpus-font v-has-width" style="overflow: hidden; width: 100%; padding-top: 1px; padding-bottom: 0px;"><div class="v-panel-captionwrap" style="margin-top: -1px;"><div class="v-panel-nocaption v-panel-nocaption-corpus-font"><span></span></div></div>
 
-<!--October 12, 2014 by Caroline T. Schroeder-->
+<!--October 30, 2014 by Caroline T. Schroeder-->
 
 <div class="v-label v-widget htmlvis v-label-htmlvis v-label-undef-w"><p><!--
 --><q class="page" page="ZHfrg.1ar"><!--
@@ -135,7 +135,7 @@
 --><span class="norm">,</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
 --><span class="norm">ⲙ</span><!-- end of "norm" --><span class="norm">ⲡ</span><!-- end of "norm" --><span class="norm">ϣⲁϫⲉ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
 --><span class="norm">ⲙ</span><!-- end of "norm" --><span class="norm">ⲡ</span><!-- end of "norm" --><span class="norm">ϫⲟⲉⲓⲥ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
---><span class="norm">.</span><!-- end of "norm" --></span><!-- end of "word" --></t><!-- end of "translation" --><t class="translation" title="'The one who follows me must hate his father and his mother, his children, his brothers and sisters and even also his own soul.' (Lk 14:26)"><!--
+--><span class="norm">.</span><!-- end of "norm" --></span><!-- end of "word" --></t><!-- end of "translation" --><t class="translation" title="'The one who follows me must hate his father and his mother, his children, his brothers and sisters and even also his own soul.' (Lk. 14:26) "><!--
 --><span class="word"><!--
 --><span class="norm">ϫⲉ</span><!-- end of "norm" --><span class="norm">ⲡ</span><!-- end of "norm" --><span class="norm">ⲉⲧ</span><!-- end of "norm" --><span class="norm">ⲛⲏⲩ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
 --><span class="norm">ϣⲁⲣⲟ</span><!-- end of "norm" --><span class="norm">ⲉⲓ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
@@ -201,8 +201,7 @@
 --><span class="norm">ⲛⲓⲙ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
 --><span class="norm">ⲉⲧ</span><!-- end of "norm" --><span class="norm">ϣⲟⲟⲡ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
 --><span class="norm">ⲛⲁ</span><!-- end of "norm" --><span class="norm">ⲩ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
---><span class="norm">.</span><!-- end of "norm" --></span><!-- end of "word" --></t><!-- end of "translation" --><t class="translation" title="they 'took their cross and followed the Lord'">
-<!--
+--><span class="norm">.</span><!-- end of "norm" --></span><!-- end of "word" --></t><!-- end of "translation" --><t class="translation" title="'they 'took their cross and followed the Lord.'  "><!--
 --><span class="word"><!--
 --><span class="norm">ⲁ</span><!-- end of "norm" --><span class="norm">ⲩ</span><!-- end of "norm" --><span class="norm">ϥⲓ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
 --><span class="norm">ⲙ</span><!-- end of "norm" --><span class="norm">ⲡⲉⲩ</span><!-- end of "norm" --><span class="norm">ⲥⲧⲁⲩⲣⲟⲥ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
@@ -219,7 +218,7 @@
 --><span class="norm">ⲉⲧ</span><!-- end of "norm" --><span class="norm">ⲟⲩⲁⲁⲃ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
 --><span class="norm">ⲛⲉ</span><!-- end of "norm" --><span class="norm">ⲡⲣⲟⲫⲏⲧⲏⲥ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
 --><span class="norm">ⲙⲛ</span><!-- end of "norm" --><span class="norm">ⲛ</span><!-- end of "norm" --><span class="norm">ⲁⲡⲟⲥⲧⲟⲗⲟⲥ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
---><span class="norm">·</span><!-- end of "norm" --></span><!-- end of "word" --></t><!-- end of "translation" --><t class="translation" title="who truly were " eunuchs="" for="" the="" sake="" of="" kingdom="" god,"="" "=""><!--
+--><span class="norm">·</span><!-- end of "norm" --></span><!-- end of "word" --></t><!-- end of "translation" --><t class="translation" title="who truly were 'eunuchs for the sake of the kingdom of God,' "><!--
 --><span class="word"><!--
 --><span class="norm">ⲛⲁⲓ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
 --><span class="norm">ⲛⲁⲙⲉ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
@@ -232,7 +231,7 @@
 --><span class="norm">ⲁⲩⲱ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
 --><span class="norm">ⲧⲁⲓ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
 --><span class="norm">ⲧⲉ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
---><span class="norm">ⲑ</span><!-- end of "norm" --><span class="norm">ⲉ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
+--><span class="norm">ⲧ</span><!-- end of "norm" --><span class="norm">ϩⲉ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
 --><span class="norm">ⲉⲛⲧ</span><!-- end of "norm" --><span class="norm">ⲁ</span><!-- end of "norm" --><span class="norm">ⲩ</span><!-- end of "norm" --><span class="norm">ϣⲱⲡⲉ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
 --><span class="norm">ⲛ</span><!-- end of "norm" --><span class="norm">ⲉⲓⲱⲧ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
 --><span class="norm">ⲛ</span><!-- end of "norm" --><span class="norm">ϩⲁϩ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
@@ -416,7 +415,7 @@
 --><span class="norm">ⲙⲛ</span><!-- end of "norm" --><span class="norm">ⲛ</span><!-- end of "norm" --><span class="norm">ⲁⲡⲟⲥⲧⲟⲗⲟⲥ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
 --><span class="norm">ⲧⲏⲣ</span><!-- end of "norm" --><span class="norm">ⲟⲩ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
 --><span class="norm">ⲛⲁⲓ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
---><span class="norm">ⲉⲛⲧ</span><!-- end of "norm" --><span class="norm">ⲁ</span><!-- end of "norm" --><span class="norm">ⲩ</span><!-- end of "norm" --><span class="norm">ϫⲟⲟ</span><!-- end of "norm" --><span class="norm">ⲥ</span><!-- end of "norm" --></span><!-- end of "word" --></t><!-- end of "translation" --><t class="translation" title="“Follow our pattern, our ordinance, our faith, our patience, our love, our endurance, our persecutions, our labors.”"><!--
+--><span class="norm">ⲉⲛⲧ</span><!-- end of "norm" --><span class="norm">ⲁ</span><!-- end of "norm" --><span class="norm">ⲩ</span><!-- end of "norm" --><span class="norm">ϫⲟⲟ</span><!-- end of "norm" --><span class="norm">ⲥ</span><!-- end of "norm" --></span><!-- end of "word" --></t><!-- end of "translation" --><t class="translation" title="'Follow our pattern, our ordinance, our faith, our patience, our love, our endurance, our persecutions, our labors.'"><!--
 --><span class="word"><!--
 --><span class="norm">ϫⲉ</span><!-- end of "norm" --><span class="norm">ⲟⲩⲉϩ</span><!-- end of "norm" --><span class="norm">ⲧⲏⲩⲧⲛ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
 --><span class="norm">ⲛⲥⲁ</span><!-- end of "norm" --><span class="norm">ⲡⲉⲛ</span><!-- end of "norm" --><!-- end of "page" --><q class="page" page="ZHfrg.1cv"><!--
@@ -427,7 +426,7 @@
 --><span class="norm">ⲧⲉⲛ</span><!-- end of "norm" --><span class="norm">ⲙⲛⲧϩⲁⲣϣϩⲏⲧ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
 --><span class="norm">ⲧⲉ</span><!-- end of "norm" --><span class="norm">ⲛ</span><!-- end of "norm" --><span class="norm">ⲁⲅⲁⲡⲏ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
 --><span class="norm">·</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
---><span class="norm">ⲧⲉⲛ</span><!-- end of "norm" --><span class="norm">ϩⲩⲡⲟⲙⲟⲛⲏ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
+--><span class="norm">ⲧⲉⲛ</span><!-- end of "norm" --><span class="norm">ϩⲩⲡⲟⲙⲟⲛⲏ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"></span><!-- end of "word" --><span class="word"><!--
 --><span class="norm">·</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
 --><span class="norm">ⲛⲉⲛ</span><!-- end of "norm" --><span class="norm">ⲇⲓⲱⲅⲙⲟⲥ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
 --><span class="norm">·</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
@@ -435,14 +434,14 @@
 --><span class="norm">·</span><!-- end of "norm" --></span><!-- end of "word" --></t><!-- end of "translation" --><t class="translation" title="Then also, "><!--
 --><span class="word"><!--
 --><span class="norm">ⲉⲓⲧⲁ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
---><span class="norm">ⲟⲛ</span><!-- end of "norm" --></span><!-- end of "word" --></t><!-- end of "translation" --><t class="translation" title="“We gave ourselves to you as a pattern [to follow].” "><!--
+--><span class="norm">ⲟⲛ</span><!-- end of "norm" --></span><!-- end of "word" --></t><!-- end of "translation" --><t class="translation" title="'We gave ourselves to you as a pattern [to follow].' "><!--
 --><span class="word"><!--
 --><span class="norm">ϫⲉ</span><!-- end of "norm" --><span class="norm">ⲁ</span><!-- end of "norm" --><span class="norm">ⲛ</span><!-- end of "norm" --><span class="norm">ⲧⲁⲁ</span><!-- end of "norm" --><span class="norm">ⲛ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
 --><span class="norm">ⲛⲏ</span><!-- end of "norm" --><span class="norm">ⲧⲛ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
 --><span class="norm">ⲛ</span><!-- end of "norm" --><span class="norm">ⲥⲙⲟⲧ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
---><span class="norm">·</span><!-- end of "norm" --></span><!-- end of "word" --></t><!-- end of "translation" --><span class="word"><!--
---><span class="norm">ⲁⲩⲱ</span><!-- end of "norm" --></span><!-- end of "word" --><t class="translation" title="And also, “Receive, my brethren, the pattern of the labor and patience of the prophets.”  "><!--
+--><span class="norm">·</span><!-- end of "norm" --></span><!-- end of "word" --></t><!-- end of "translation" --><t class="translation" title="And also, “Receive, my brethren, the pattern of the labor and patience of the prophets.”  "><!--
 --><span class="word"><!--
+--><span class="norm">ⲁⲩⲱ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
 --><span class="norm">ⲟⲛ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
 --><span class="norm">ϫⲉ</span><!-- end of "norm" --><span class="norm">ϫⲓ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
 --><span class="norm">ϭⲉ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
@@ -526,7 +525,7 @@
 --><span class="norm">ⲉ</span><!-- end of "norm" --><span class="norm">ⲡ</span><!-- end of "norm" --><span class="norm">ⲟⲩϫⲁⲓ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
 --><span class="norm">ⲛ</span><!-- end of "norm" --><span class="norm">ⲣⲱⲙⲉ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
 --><span class="norm">ⲛⲓⲙ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
---><span class="norm">ϣⲁ</span><!-- end of "norm" --><span class="norm">ϩⲣⲁⲓ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
+--><span class="norm">ϣⲁϩⲣⲁⲓ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
 --><span class="norm">,</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
 --><span class="norm">ⲉ</span><!-- end of "norm" --><span class="norm">ⲧⲉⲛⲟⲩ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
 --><span class="norm">·</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
@@ -589,7 +588,7 @@
 --><span class="norm">.</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
 --><span class="norm">ⲉ</span><!-- end of "norm" --><span class="norm">ϣⲡ</span><!-- end of "norm" --><span class="norm">ϩⲓⲥⲉ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
 --><span class="norm">ⲙⲛ</span><!-- end of "norm" --><span class="norm">ϩⲉⲛ</span><!-- end of "norm" --><span class="norm">ⲕⲟⲟⲩⲉ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
---><span class="norm">ϣⲁ</span><!-- end of "norm" --><span class="norm">ϩⲣⲁⲓ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
+--><span class="norm">ϣⲁϩⲣⲁⲓ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
 --><span class="norm">ⲉ</span><!-- end of "norm" --><span class="norm">ⲡ</span><!-- end of "norm" --><span class="norm">ⲙⲟⲩ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
 --><span class="norm">·</span><!-- end of "norm" --></span><!-- end of "word" --></t><!-- end of "translation" --><t class="translation" title="And in all these things they give thanks to the Lord, "><!--
 --><span class="word"><!--
@@ -649,8 +648,7 @@
 --><span class="norm">ⲙⲛ</span><!-- end of "norm" --><span class="norm">ϩⲉⲛ</span><!-- end of "norm" --><span class="norm">ⲛⲟϭ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
 --><span class="norm">ⲛ</span><!-- end of "norm" --><span class="norm">ϩⲓⲥⲉ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
 --><span class="norm">,</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
---><span class="norm">ϣⲁ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
---><span class="norm">ϩⲣⲁⲓ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
+--><span class="norm">ϣⲁϩⲣⲁⲓ</span><!-- end of "norm" --></span><!-- end of "word" --><span class="word"><!--
 --><span class="norm">ⲉ</span><!-- end of "norm" --><span class="norm">ⲡ</span><!-- end of "norm" --><span class="norm">ⲙⲟⲩ</span><!-- end of "norm" --></span><!-- end of "word" --></t><!-- end of "translation" --></p><!-- end of "" --><p><!--
 --><t class="translation" title="And so we remember…"><!--
 --><span class="word"><!--
