--- a/acknowledgments.html
+++ b/acknowledgments.html
@@ -51,6 +51,7 @@
           <li>Eliese-Sophia Lincke, Humboldt University (2014-)</li>
           <li>So Miyagawa, Kyoto University (2014-)</li>
           <li>Bridget Almas, Perseus Digital Library (consultant for SCRIPTORIUM) (2014-)</li>
+          <li>Edwin Ko, Georgetown University, annotation interface development (2014-)</li>		  
           <li>Yanrui Liu,  M.A., University of the Pacific, repository and website managment (2014-)</li>
           <li>Janet Timbie, the Catholic University of America (2013); <a href="https://korpling.german.hu-berlin.de/annis3/scriptorium#_q=dG9rICYgbWV0YTo6YW5ub3RhdGlvbiA9IC8uKlRpbWJpZS4qLw&amp;_c=U2hlbm91dGUuYTIyLGFicmFoYW0ub3VyLmZhdGhlcixhcG9waHRoZWdtYXRhLnBhdHJ1bS4xMSxTYWhpZGljYS5NYXJrLjEtNixCZXNhLmxldHRlcnM&amp;" target="new">editor and annotator</a></li>
         </ul>
